# SlotGame

./: ActivePredictionsDialog.h  CMakeLists.txt  LeaderboardWindow.cpp  LeaderboardWindow.h  MainWindow.cpp  MainWindow.h  PredictionDialog.cpp  PredictionDialog.h  ProfileDialog.cpp  ProfileDialog.h  QuizWidget.h  README.md  ResultDialog.cpp  ResultDialog.h  StartWindow.cpp  StartWindow.h  StrategyDialog.cpp  StrategyDialog.h  generate_questions.py  main.cpp  main.cpp.bak  questions.h  run_test.sh  test_crash.cpp
SlotGame1/data/: players.txt
SlotGame1/include/: file.h  player.h  predictionevaluator.h  predictionmanager.h  strategy.h
SlotGame1/src/: file.cpp  leaderboard.cpp  main.cpp  player.cpp  predictionevaluator.cpp  predictionmanager.cpp  search.cpp  slot.cpp
backend/include/: leaderboard.h  prediction.h  predictionmanager.h  probability.h  search.h  slot.h
backend/src/: predictionevaluator.cpp  probability.cpp  search.cpp  slot.cpp  strategy.cpp
data/: history_Krishna.txt  history_Raunak.txt  history_Saumyaaa.txt  history_test.txt  players.txt
frontend/include/: ActivePredictionsDialog.h  LeaderboardWindow.h  MainWindow.h  PredictionDialog.h  ProfileDialog.h  QuizWidget.h  StartWindow.h  StrategyDialog.h
frontend/src/: ActivePredictionsDialog.cpp  LeaderboardWindow.cpp  MainWindow.cpp  QuizWidget.cpp  ResultDialog.cpp  StartWindow.cpp  StrategyDialog.cpp
include/: leaderboard.h  player.h  prediction.h  predictionevaluator.h  strategy.h
scripts/: run_lldb.py
src/: file.cpp  leaderboard.cpp  player.cpp  predictionevaluator.cpp  predictionmanager.cpp  slot.cpp  strategy.cpp
